--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="my-awards">
                 <!--<div class="vertical-gap1"> </div>-->
                 <div class="heading">
@@ -116,6 +117,7 @@
                     </div>
                 </div>
                 <!--<div class="vertical-gap2"> </div>-->
+                <div class="vertical-space"> </div>
                 <div class="item-row">
                     <div class="bullet">•</div>
                     <div class="award-item-content">
@@ -220,7 +222,7 @@
                     <div class="item-row-heading">
                         <div class="item-company item-heading cv-color2">vConstruct Private Limited</div>
                         <div class="item-profile item-heading cv-color2">
-                            Virtual Design, BIM and Construction Management
+                            Virtual Design, BIM & Construction Management
                         </div>
                         <div class="item-void"> </div>
                         <div class="item-year item-heading cv-color2">
@@ -261,7 +263,7 @@
                     <div class="item-row-heading">
                         <div class="item-company item-heading cv-color2">Obitors.net, IT & services</div>
                         <div class="item-profile item-heading cv-color2">
-                            Founder, SEO and digital marketing Specialist
+                            Founder
                         </div>
                         <div class="item-void"> </div>
                         <div class="item-year item-heading cv-color2">
@@ -364,6 +366,7 @@
                     <div class="seperator">
                     </div>
                 </div>
+                <div class="vertical-space"> </div>
                 <div class="intern">
                     <div class="item-row">
                         <div class="bullet">•</div>
@@ -409,6 +412,7 @@
                     <div class="seperator">
                     </div>
                 </div>
+                <div class="vertical-space"> </div>
                 <div class="intern">
                    <div class="item-row">
                         <div class="bullet">•</div>
@@ -443,6 +447,7 @@
                     <div class="seperator">
                     </div>
                 </div>
+                <div class="vertical-space"> </div>
                 <div class="intern">
                     <div class="item-row">
                         <div class="bullet">•</div>
@@ -511,7 +516,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="intern">
+                <!--<div class="intern">
                     <div class="item-row-heading">
                         <div class="item-company item-heading cv-color2">Executive head</div>
                         <div class="item-profile item-heading cv-color2">
@@ -547,7 +552,7 @@
                             of Netaji Bose), Shri. J. Sai Deepak (Distinguished advocate, Supreme Court of India), Shri Abhijit Iyer-Mitra (Defence & Foreign Policy expert).
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="intern">
                     <div class="item-row-heading">
                         <div class="item-company item-heading cv-color2">Executive</div>
@@ -637,6 +642,7 @@
                     <div class="seperator">
                     </div>
                 </div>
+                <div class="vertical-space"> </div>
                 <div class="intern">
                     <div class="item-row">
                         <div class="bullet">•</div>
