--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="item-row">
                     <div class="bullet">•</div>
                     <div class="award-item-content">
-                        Selected for 10th <b>International Abilympics Championship</b> to represent India in Graphic Design to be held in <b>Russia</b> in 2021.
+                        Shortlisted for 10th <b>International Abilympics Championship</b> to represent India in Graphic Design to be held in <b>Russia</b> in 2021.
                     </div>
                     <div class="item-year">
                         [2019]
@@ -261,8 +261,8 @@
                 </div>
                 <div class="intern">
                     <div class="item-row-heading">
-                        <div class="item-company item-heading cv-color2">Obitors.net, IT & services</div>
-                        <div class="item-profile item-heading cv-color2">
+                        <div class="item-company-2 item-heading cv-color2">Obitors.net, IT & services<div class="head-italic"> (Personal Project)</div></div>
+                        <div class="item-profile-2 item-heading cv-color2">
                             Founder
                         </div>
                         <div class="item-void"> </div>
@@ -299,6 +299,31 @@
                         <div class="bullet">•</div>
                         <div class="item-content">
                             Implemented features and internal enhancements in the website that improved SEO ranking by <b>40%</b>, web functionality and loading speed by <b>20%</b>.
+                        </div>
+                    </div>
+                </div>
+                <div class="intern">
+                    <div class="item-row-heading">
+                        <div class="item-company-2 item-heading cv-color2">PreArticle Book store<div class="head-italic"> (Personal Project)</div></div>
+
+                        <div class="item-profile-2 item-heading cv-color2">
+                            Android developer, UI/UX Developer
+                        </div>
+                        <div class="item-void"> </div>
+                        <div class="item-year item-heading cv-color2">
+                            [Apr '20]
+                        </div>
+                    </div>
+                    <div class="item-row">
+                        <div class="bullet">•</div>
+                        <div class="item-content">
+                            Solely developed and designed a fully functional Android book store + e-book reader application in record time of <b>21</b> days using dart and flutter framework.
+                        </div>
+                    </div>
+                    <div class="item-row">
+                        <div class="bullet">•</div>
+                        <div class="item-content">
+                            Design and performance tuning to improve performance by <b>25%</b> over multiple functions to compete with world class mobile applications.
                         </div>
                     </div>
                 </div>
@@ -360,9 +385,9 @@
                     </div>
                 </div>
             </div>
-            <div class="my-Internships">
+            <!--<div class="my-Internships">
                 <div class="heading">
-                    Other Projects (Hosted on github.com/obitors)
+                    Personal Projects
                     <div class="seperator">
                     </div>
                 </div>
@@ -405,7 +430,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div class="my-Internships">
                 <div class="heading">
                     Skillset and Expertise
@@ -493,7 +518,7 @@
                     <div class="item-row">
                         <div class="bullet">•</div>
                         <div class="item-content">
-                            Managed funds of <b>INR 2,50,000</b> and team of <b>24</b> volunteers for planning and execution of social benefit driven policies within Kharagpur Area.
+                            Managed funds of <b>INR 2,00,000</b> and team of <b>24</b> volunteers for planning and execution of social benefit driven policies within Kharagpur Area.
                         </div>
 
                     </div>
@@ -503,12 +528,12 @@
                             Created self-employment opportunities for Narda orphanage by raising funds of <b>INR 1,00,000</b> for installation of electric leaf plate making machines.
                         </div>
                     </div>
-                    <div class="item-row">
+                    <!--<div class="item-row">
                         <div class="bullet">•</div>
                         <div class="item-content">
                             Provided free education and Educational amenities to <b>35</b> best performers out of 400 students in a test serires conducted by Sarth, IIT Kharagpur.
                         </div>
-                    </div>
+                    </div>-->
                     <div class="item-row">
                         <div class="bullet">•</div>
                         <div class="item-content">
@@ -536,9 +561,8 @@
                     <div class="item-row">
                         <div class="bullet">•</div>
                         <div class="item-content">
-                            organised panel discussions, debate sessions, and lectures on topics relevant to today's socio-economical scenario by subject matter experts .
+                            organised panel discussions, debate sessions, and lectures on topics relevant to today's socio-economical scenario by subject matter experts.
                         </div>
-
                     </div>
                     <div class="item-row">
                         <div class="bullet">•</div>
@@ -647,13 +671,13 @@
                     <div class="item-row">
                         <div class="bullet">•</div>
                         <div class="item-content">
-                            Application of new technologies and the change of processes in planning, implementation and operations, <b>RKW Architectur +, Dusseldorf, Gemany </b>.
+                            Profound member of Samvaad IIT Kharagpur; oraganized various panel discussions, debate sessionsand Guest Lectures by subject matter experts.
                         </div>
                     </div>
                     <div class="item-row">
                         <div class="bullet">•</div>
                         <div class="item-content">
-                            <b>"Symposium on Healthcare Environments" The Westin, Kolkata: </b>Participated in discussion with industry specialists, AIIMS doctors and investors.
+                            Mentored a junior batch of 40 students from Architecture department in web development and desig
                         </div>
                     </div>
                     <div class="item-row">
