--- a/index.html
+++ b/index.html
@@ -350,7 +350,6 @@
                         <div class="item-content">
                             Provide UI/UX, web, product design and technological expertise to the business and work directly with Mobile development and production team.
                         </div>
-
                     </div>
                     <div class="item-row">
                         <div class="bullet">•</div>
@@ -376,7 +375,6 @@
                             Maintaining a database of user research participants, as well as a central UX resource that gives team members visibility into research process and findings.
                         </div>
                     </div>
-
                     <div class="item-row">
                         <div class="bullet">•</div>
                         <div class="item-content">
@@ -465,7 +463,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="my-Internships">
                 <div class="heading">
                     Conferences and workshops
@@ -684,6 +681,12 @@
                         <div class="bullet">•</div>
                         <div class="item-content">
                             <b>“AR and VR in construction management”, Pune: </b>Actively participated in workshops on facility management conducted by the reality capture vertical.
+                        </div>
+                    </div>
+                    <div class="item-row">
+                        <div class="bullet">•</div>
+                        <div class="item-content">
+                            Ashutosh Agrawal
                         </div>
                     </div>
                 </div>
