--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="col-100">
             <div class="my-heading">
                 <div class="head-logo">
-                    <img src="img/Ashutosh2.JPG" width="70%">
+                    <img src="https://1.bp.blogspot.com/-UGRaVnnfuYY/Xm6NFlWdVoI/AAAAAAAABnw/-Qc08W9P_cQS3AI8IGQZcJYr-dY70ypqQCLcBGAsYHQ/s500/ashutosh.jpg" width="80%">
                 </div>
                 <div class="head-content">
                     <div class="my-name">
@@ -73,7 +73,7 @@
                         Indian Institute of Technology, Kharagpur
                     </div>
                     <div class="edu-marks">
-                        8.20/10.0
+                        8.23/10.0
                     </div>
                 </div>
                 <div class="item-edu-row">
@@ -342,7 +342,7 @@
                         </div>
                         <div class="item-void"> </div>
                         <div class="item-year item-heading cv-color2">
-                            [Oct '17 - Present]
+                            [Oct '17 - Oct '19]
                         </div>
                     </div>
                     <div class="item-row">
@@ -440,13 +440,13 @@
                    <div class="item-row">
                         <div class="bullet">•</div>
                         <div class="item-content">
-                            <b>Courses Completed: </b>Algorithms I,II (princeton university) • Android development with flutter • Programming and Data Structures • SEO Specialization.
+                            <b>Courses Completed: </b> • Android development with flutter • Programming and Data Structures • SEO Specialization (UC Davis) . Android with Kotlin
                         </div>
                     </div>
                     <div class="item-row">
                         <div class="bullet">•</div>
                         <div class="item-content">
-                            <b>Programming Languages and softwares: </b>C • C++ • Python • Kotlin • Javascript • Java • HTML • CSS • Dart • Flutter • Bootstrap • Google firebase • Adobe
+                            <b>Programming Languages and softwares: </b>C • C++ • Python • Kotlin • Javascript • HTML • CSS • Dart • Flutter • Bootstrap • Google firebase • Adobe
                         </div>
                     </div>
                     <div class="item-row">
@@ -674,20 +674,21 @@
                     <div class="item-row">
                         <div class="bullet">•</div>
                         <div class="item-content">
-                            Mentored a junior batch of 40 students from Architecture department in web development and desig
+                             Student member at <b>SSAP(Students’ Society of Architects and Planners)</b>, Mentored a junior batch of 40 students for web development and web design.
                         </div>
                     </div>
-                    <div class="item-row">
+                    <!--<div class="item-row">
                         <div class="bullet">•</div>
                         <div class="item-content">
                             <b>“AR and VR in construction management”, Pune: </b>Actively participated in workshops on facility management conducted by the reality capture vertical.
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
     </div>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136744530-3"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136744530-3">
+    </script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
